# AndroidDemos

./: README.md  config.gradle  settings.gradle
cmake/: build.gradle
cmake/src/main/: AndroidManifest.xml
cmake/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  native-lib.cpp
customview/: build.gradle
customview/src/main/: AndroidManifest.xml
customview/src/main/res/layout/: activity_main.xml
dark/: build.gradle
dark/src/main/: AndroidManifest.xml
dark/src/main/res/layout/: activity_main.xml
dark/src/main/res/values/: colors.xml  strings.xml
dark/src/main/res/values-night/: colors.xml
databinding/: build.gradle
databinding/src/main/: AndroidManifest.xml
databinding/src/main/res/layout/: activity_main.xml  activity_splash.xml  fragment_basic.xml  item_basic.xml
databinding/src/main/res/values/: strings.xml
fingerprint/: build.gradle
fingerprint/src/main/: AndroidManifest.xml
fingerprint/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
poi/: build.gradle
poi/src/main/: AndroidManifest.xml
poi/src/main/res/layout/: activity_main.xml
retrofit/: build.gradle
retrofit/src/main/: AndroidManifest.xml
retrofit/src/main/res/layout/: activity_main.xml
stickyItemDecoration/: build.gradle
stickyItemDecoration/src/main/assets/: city.json
stickyItemDecoration/src/main/res/layout/: activity_main.xml  item_city.xml
wxsendmsg/: build.gradle
wxsendmsg/src/main/: AndroidManifest.xml
wxsendmsg/src/main/res/layout/: activity_main.xml
wxsendmsg/src/main/res/values/: strings.xml
(+43 files in other folders)
